# MatoryUpperUe

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  test_matory.py
autotests/: conftest.py  test_game_flow.py  test_lobby.py  test_login.py  test_main.py  test_multiplayer.py
autotests/pages/: game_page.py  lobby_page.py  login_page.py  main_page.py  room_page.py
docs/superpowers/plans/: 2026-07-21-matory-framework.md
docs/superpowers/specs/: 2026-07-21-matory-framework-design.md
matory/: __init__.py  errors.py  pytest_plugin.py  recorder.py  session.py
matory/client/: __init__.py  connection.py  protocol.py
matory/elements/: __init__.py  button.py  text.py  widget.py
matory/page/: __init__.py  page.py
tests/: conftest.py  helpers.py  test_button.py  test_connection.py  test_errors.py  test_example.py  test_page.py  test_protocol.py  test_pytest_plugin.py  test_recorder.py  test_session.py  test_text.py  test_widget.py
tests/pages/: main_menu.py
