[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matory"
version = "0.1.0"
description = "UE UI automation framework with pytest integration"
requires-python = ">=3.10"
dependencies = []
optional-dependencies.test = ["pytest>=7.0"]

[project.entry-points.pytest11]
matory = "matory.pytest_plugin"

[tool.setuptools.packages.find]
include = ["matory*"]

[tool.setuptools.package-data]
matory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: marks tests as UE UI tests",
]
