[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matory"
version = "0.1.0"
description = "UE UI automation framework with pytest integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = []
optional-dependencies.test = ["pytest>=7.0"]

[project.entry-points.pytest11]
matory = "matory.pytest_plugin"

[tool.setuptools.packages.find]
include = ["matory*"]

[tool.setuptools.package-data]
matory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: marks tests as UE UI tests",
]
